old-code/kubernetes/vcluster-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
  name: ${VCLUSTER_NAME}-ingress
  namespace: vcluster-${VCLUSTER_NAME}
spec:
  ingressClassName: traefik
  rules:
    - host: &host ${VCLUSTER_NAME}.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${VCLUSTER_NAME}
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: ${VCLUSTER_NAME}-vcluster-ssl-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ${VCLUSTER_NAME}-ingres
  namespace: vcluster-${VCLUSTER_NAME}
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  entryPoints:
    - tcpep
  routes:
    - match: HostSNI(`${VCLUSTER_NAME}.${SECRET_DOMAIN}`)
      services:
        - name: ${VCLUSTER_NAME}
          port: 443
  tls:
    passthrough: true
